--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -1,14 +1,17 @@
-{"$schema":"http://json.schemastore.org/tsconfig",
-
-  "compilerOptions":
-  {
+{
+  "$schema": "http://json.schemastore.org/tsconfig",
+  "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
+
+    // FIXME(bajtos) LB4 is not compatible with this setting yet
     "strictPropertyInitialization": false,
 
+    // https://devblogs.microsoft.com/typescript/announcing-typescript-4-4/#use-unknown-catch-variables
+    // "useUnknownInCatchVariables": false,
 
     "incremental": true,
 
@@ -19,8 +22,6 @@
     "target": "es2018",
     "sourceMap": true,
     "declaration": true,
-    "importHelpers": true,
-    "outDir":"dist",
-    "rootDir":"src",
-    "composite":false
-  },"include":["src/**/*","src/**/*.json"]}
+    "importHelpers": true
+  }
+}
