--- a/package.json
+++ b/package.json
@@ -59,9 +59,12 @@
     "@loopback/rest": "^10.0.0",
     "@loopback/rest-explorer": "^3.3.2",
     "@loopback/service-proxy": "^3.2.2",
+    "@loopback/socketio": "^0.6.0",
     "loopback-connector-mysql": "^5.4.4",
     "loopback-connector-rest": "^4.0.1",
     "morgan": "^1.10.0",
+    "onesignal-node": "^3.3.0",
+    "socket.io": "^4.5.0",
     "tsc-watch": "^5.0.3",
     "tslib": "^2.0.0"
   },
