--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "@loopback/rest-explorer": "^3.3.2",
     "@loopback/service-proxy": "^3.2.2",
     "@loopback/socketio": "^0.6.0",
+    "loopback-component-storage": "^3.7.0",
     "loopback-connector-mysql": "^5.4.4",
     "loopback-connector-rest": "^4.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "onesignal-node": "^3.3.0",
     "socket.io": "^4.5.0",
     "tsc-watch": "^5.0.3",
@@ -75,6 +77,7 @@
     "@loopback/testlab": "^3.4.2",
     "@types/lodash": "^4.14.182",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^10.17.60",
     "eslint": "^7.29.0",
     "lodash": "^4.17.21",
